--- a/src/app/components/pay-packet-detail/pay-packet-detail.component.html
+++ b/src/app/components/pay-packet-detail/pay-packet-detail.component.html
@@ -39,6 +39,6 @@
         </div>
       </form>
     </section>
-<app-component-list></app-component-list>
+<app-component-list [components]="paypacket.components" [paypacketId]="paypacket.id"></app-component-list>
     
     
